add infra-twitter@ alias
Change-Id: I780ec52be72eb8d7dc9142c8b757f8a5acf9816d

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -138,6 +138,7 @@
         quaid: "{{ quaid_mail }}"
         events: community
         ovirt-copr: "{{ eedri_mail }}"
+        infra-twitter: infra-private
   - name: Install MDA
     include_role:
       name: dovecot
