use 'chrony' shared role
Change-Id: I35e6b584dce3bd119e52cf2e6879151076b67a39

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -7,6 +7,7 @@
   - selinux
   - openssh
   - unattended_updates
+  - chrony
   tags: base
 
 # use inventory_hostname or webui_vhost as hostname for MX and IMAP (TLS SAN OK)
