prepare ML server in the Community Cage
Change-Id: I5dc2399451ef726178757d468b9f14d8279c994a

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,22 +1,22 @@
 ---
 all:
   hosts:
-    mail.phx.ovirt.org:
+    mail.ovirt.org:
     ovirt-web-builder.osci.io:
 
   children:
-    phx_zone:
-      hosts:
-        mail.phx.ovirt.org:
+    #phx_zone:
+    #  hosts:
 
     # zone managed by OSAS in the Community Cage project
     osci_zone:
       hosts:
         ovirt-web-builder.osci.io:
+        mail.ovirt.org:
 
     mailing:
       hosts:
-        mail.phx.ovirt.org:
+        mail.ovirt.org:
 
     web_builders:
       hosts:
