user new www.phx.ovirt.org to replace OpenShift v2
Change-Id: Id678c0731beba718b77ed32ca3cda50334da3cb4

--- a/hosts.yml
+++ b/hosts.yml
@@ -3,10 +3,12 @@ all:
   hosts:
     mail.ovirt.org:
     ovirt-web-builder.osci.io:
+    www.phx.ovirt.org:
 
   children:
-    #phx_zone:
-    #  hosts:
+    phx_zone:
+     hosts:
+       www.phx.ovirt.org:
 
     # zone managed by OSAS in the Community Cage project
     osci_zone:
