--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -85,6 +85,7 @@
     copy:
       src: mailing/users/
       dest: /etc/dovecot/users/
+  # TODO: not necessary anymore, handled by new www host; remove after DNS is sure to have reached all Internet caches
   - name: redirect oVirt website apex
     include_role:
       name: httpd
@@ -122,4 +123,25 @@
       user: "{{ website_username }}"
       job: "cd /srv/builder/{{ website_name }} && ./fetch-dashboard.rb"
     when: website_has_dashboard is defined and website_has_dashboard
+
+- hosts: www.phx.ovirt.org
+  tasks:
+    - name: create web builder's user
+      user:
+        name: "{{ websync_user }}"
+        comment: "Web Builder User"
+    - name: "Create vhost for {{ inventory_hostname }}"
+      include_role:
+        name: httpd
+        tasks_from: vhost
+      vars:
+        website_domain: www.ovirt.org
+        server_aliases:
+          - ovirt.org
+        document_root: "{{ websync_path }}"
+        document_root_group: "{{ websync_user }}"
+        use_tls: True
+        use_letsencrypt: True
+        mail_domain: ovirt.org
+        force_tls: True
 
