fix variable clash between postfix and dovecot roles
Ansible loads all role defaults _first_, and then execute the roles.
This is counter-intuitive and results in a role called later to affect
things earlier in the play (as variables are global).

Here more specifically the variables 'auth' is left undefined in the
postfix role and defined to "pam" in the dovecot role. When the postfix
role is executed it thinks an authentication mechanism is to be defined
because the variable holds a value. Due to the unexpected value of the
variable, only the common part of the config is setup, enabling SASL,
but no real mechanism is configured. This result in spammy warnings
when postfix receives mails.

Using include_role allows to load defaults only when the task in run,
having only a forward effect on variables. This is also quite practical
to treat calling roles as a task so they can be mixed and easily
ordered. I found this solution better than artificially splitting the
play for no logical reason.

Change-Id: I2430bda3e45d43f66a23eb3c678e307428ef0aa5

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -14,64 +14,69 @@
 - hosts: mail.ovirt.org
   vars:
     webui_vhost: lists.ovirt.org
-  roles:
-  - role: mailing-lists-server
-    name: "oVirt List Archives"
-    domain: "{{ ovirt_domain }}"
-    admin_users:
-      - duck
-      - duck-rh
-      - misc
-      - eedri
-      - ederevea
-    mail_aliases:
-      # Person who should get root's mail
-      root: "{{ ['root'] + ovirt_infra_emails }}"
-      listmaster: root
-      www: webmaster
-      webmaster: root
-      noc: root
-      hostmaster: root
-      info: postmaster
-      sales: postmaster
-      support: postmaster
-      # trap decode to catch security attacks
-      decode: root
-      contact: "{{ ovirt_infra_ml_pv }}"
-      # aliases that jira would use
-      infra-support: jira
-      community: "{{ ovirt_community_emails }}"
-      ## Random new aliases we create
-      wordpress: community
-      twitter: community
-      identica: community
-      ovirtbot: "{{ eedri_mail }}"
-      kerri: "{{ kerri_mail }}"
-      pr: "{{ ovirt_press_emails }}"
-      press: "{{ ovirt_press_emails }}"
-      hootsuite: "{{ eedri_mail }}"
-      quaid: "{{ quaid_mail }}"
-      events: community
-      ovirt-copr: "{{ eedri_mail }}"
-      infra-twitter: infra-private
-    use_simple_tls: True
-    # social_auth is defined in host_vars
-    # caught by underlying 'mailman3' role
-    with_fedora_auth: True
-    # caught by underlying 'postgrey' role
-    whitelist_clients:
-      - gerrit.ovirt.org
-      - redhat.com
-    # caught by underlying 'postfix' role
-    mynetworks:
-      - 66.187.230.42
-    local_accounts:
-      - jira
-  - role: dovecot
-    with_pop3: true
-    # inherit TLS settings from 'mailing-lists-server' role
-    auth: yaml-dict
   tasks:
+  - name: Install Mailing-Lists Server
+    include_role:
+      name: mailing-lists-server
+    vars:
+      name: "oVirt List Archives"
+      domain: "{{ ovirt_domain }}"
+      admin_users:
+        - duck
+        - duck-rh
+        - misc
+        - eedri
+        - ederevea
+      mail_aliases:
+        # Person who should get root's mail
+        root: "{{ ['root'] + ovirt_infra_emails }}"
+        listmaster: root
+        www: webmaster
+        webmaster: root
+        noc: root
+        hostmaster: root
+        info: postmaster
+        sales: postmaster
+        support: postmaster
+        # trap decode to catch security attacks
+        decode: root
+        contact: "{{ ovirt_infra_ml_pv }}"
+        # aliases that jira would use
+        infra-support: jira
+        community: "{{ ovirt_community_emails }}"
+        ## Random new aliases we create
+        wordpress: community
+        twitter: community
+        identica: community
+        ovirtbot: "{{ eedri_mail }}"
+        kerri: "{{ kerri_mail }}"
+        pr: "{{ ovirt_press_emails }}"
+        press: "{{ ovirt_press_emails }}"
+        hootsuite: "{{ eedri_mail }}"
+        quaid: "{{ quaid_mail }}"
+        events: community
+        ovirt-copr: "{{ eedri_mail }}"
+        infra-twitter: infra-private
+      use_simple_tls: True
+      # social_auth is defined in host_vars
+      # caught by underlying 'mailman3' role
+      with_fedora_auth: True
+      # caught by underlying 'postgrey' role
+      whitelist_clients:
+        - gerrit.ovirt.org
+        - redhat.com
+      # caught by underlying 'postfix' role
+      mynetworks:
+        - 66.187.230.42
+      local_accounts:
+        - jira
+  - name: Install POP3 Server
+    include_role:
+      name: dovecot
+    vars:
+      with_pop3: true
+      # inherit TLS settings from 'mailing-lists-server' role
+      auth: yaml-dict
   - name: Configure web access to old ML archives
     copy:
       src: "mailing/web/old_ml_archives.conf"
