--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -40,6 +40,7 @@
   - strace
   - vim-enhanced
   - tcpdump
+  - lsof
 
 - name: Test if the host is an AWS instance
   stat: path=/etc/cloud/cloud.cfg.d
