--- a/roles/admin_ssh_keys/tasks/main.yml
+++ b/roles/admin_ssh_keys/tasks/main.yml
@@ -3,12 +3,21 @@
   authorized_key: user=root
                   key="{{ item }}"
   with_file:
-  - misc.pub
-  - misc2.pub
+  - misc_main.pub
+  - misc_backup.pub
   - quaid.pub
   - duck.pub
   - eedri.pub
   - ederevea.pub
   - bkorren.pub
   - amarchuk.pub
+
+- name: Remove old root ssh keys
+  authorized_key:
+    user: root
+    state: absent
+    key: "{{ item }}"
+  with_file:
+  - misc_nano_old.pub
+  - misc_tpm_old.pub
 
