use alternate history of the 'httpd' role
Change-Id: I3a79d913b9f61b68164eb8738be6c612fc4f34b4

--- a/requirements.yml
+++ b/requirements.yml
@@ -23,9 +23,8 @@
   name: spamassassin
 - src: git+https://gitlab.com/osas/ansible-role-dovecot.git
   name: dovecot
-- src: git+https://github.com/OSAS/ansible-role-httpd.git
+- src: git+https://gitlab.com/osas/ansible-role-ah-httpd.git
   name: httpd
-  version: duck_work_during_misc_vacation
 - src: git+https://github.com/OSAS/ansible-role-web_builder.git
   name: builder
 - src: git+https://gitlab.com/osas/ansible-role-msmtp.git
