builder moved into Cage internal VLAN
Change-Id: I5d869083b4db852ce7ed5f3eeeb95560264d2747

--- a/hosts.yml
+++ b/hosts.yml
@@ -2,7 +2,7 @@
 all:
   hosts:
     mail.ovirt.org:
-    ovirt-web-builder.osci.io:
+    ovirt-web-builder.int.osci.io:
     www.phx.ovirt.org:
 
   children:
@@ -13,8 +13,11 @@ all:
     # zone managed by OSAS in the Community Cage project
     osci_zone:
       hosts:
-        ovirt-web-builder.osci.io:
         mail.ovirt.org:
+      children:
+        osci_internal_zone:
+          hosts:
+            ovirt-web-builder.int.osci.io:
 
     mailing:
       hosts:
@@ -22,5 +25,5 @@ all:
 
     web_builders:
       hosts:
-        ovirt-web-builder.osci.io:
+        ovirt-web-builder.int.osci.io:
 
