add jenkins account (Closes: #1213)
Change-Id: Id57c4b93ae87035ff579a75e7c17e654f379c0fc

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -71,6 +71,7 @@
         - 66.187.230.42
       local_accounts:
         - jira
+        - jenkins
   - name: Install POP3 Server
     include_role:
       name: dovecot
