add auto-expire for Jenkins mailbox
Change-Id: I97773e770f074a12ba844e37b859d6b979d8edbb

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -92,6 +92,13 @@
     copy:
       src: mailing/users/
       dest: /etc/dovecot/users/
+  - name: Auto-expire Jenkins mailbox
+    cron:
+      name: "Auto-expire Jenkins mailbox"
+      minute: "21"
+      hour: "6"
+      user: root
+      job: "doveadm expunge -u jenkins mailbox Inbox savedbefore 30d"
 
 - hosts: web_builders
   vars:
