--- a/playbooks/mailing/users/jira.yml
+++ b/playbooks/mailing/users/jira.yml
@@ -1,6 +1,6 @@
 ---
 uid: nobody
 gid: mail
-password: "{SHA512-CRYPT}$6$G.AzpyAtZ74/Koun$lcZ8XR8RywKw2LZTlP4d9EnbxIpc9Y5BGKDT5Re040/YI1aw526qzQfHXz9gdfD3E2fW1hUvlwByp2A6EAIoK0"
+password: "{SHA512-CRYPT}$6$IOS3W5Ut09SJBFWW$AL4063Hq/ZUDvr.Hg8WxZnEH1IwumBslJzrcq8CS.fMwybowMGUDNR6S.VxOY5A/ySwGR4JZiyJkXUPxbvtwx/"
 home: /var/mail/
 mail: "maildir:/var/mail/%u"
