user placeholder (%u) is not working with yaml-auth
Fixes OVIRT-2004

Change-Id: Ifa4f33c7f0e7ae70c084dbca8a6fcf6b391ace4c

--- a/playbooks/mailing/users/jira.yml
+++ b/playbooks/mailing/users/jira.yml
@@ -3,4 +3,4 @@ uid: nobody
 gid: mail
 password: "{SHA512-CRYPT}$6$IOS3W5Ut09SJBFWW$AL4063Hq/ZUDvr.Hg8WxZnEH1IwumBslJzrcq8CS.fMwybowMGUDNR6S.VxOY5A/ySwGR4JZiyJkXUPxbvtwx/"
 home: /var/mail/
-mail: "maildir:/var/mail/%u"
+mail: "maildir:/var/mail/jira"
