Fix redirection for the old MM2 URLs, causing mayhem
I unfortunately also matched /archives/api/mailman/* URLS.

Change-Id: I2dfafb924abb0dd8cc27de00a314bb1c354147c6

--- a/playbooks/mailing/web/old_ml_archives.conf
+++ b/playbooks/mailing/web/old_ml_archives.conf
@@ -8,6 +8,6 @@ Alias "/pipermail" "/var/lib/mailman/archives/public"
     IndexOptions FancyIndexing HTMLTable IconsAreLinks SuppressSize SuppressDescription NameWidth=*
 </Directory>
 
-RedirectMatch /mailman/listinfo/(.*) /archives/list/$1@ovirt.org/
-RedirectMatch /mailman.* /archives/
+RedirectMatch ^/mailman/listinfo/(.*) /archives/list/$1@ovirt.org/
+RedirectMatch ^/mailman.* /archives/
 
