update ML's admin list
Change-Id: I81409607c2ff38bb00a10d23659f11cf2e6f9ae5

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -30,9 +30,8 @@
       domain: "{{ ovirt_domain }}"
       admin_users:
         - duck
-        - duck-rh
         - misc
-        - eedri
+        - eyal
         - ederevea
       mail_aliases:
         # Person who should get root's mail
