redirect stats to Bitergia
fixes OVIRT-2038

Change-Id: Ifa72f8ab30d7435d11c165e4fdfe333b77dbcc0e

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -150,4 +150,7 @@
         use_letsencrypt: True
         mail_domain: ovirt.org
         force_tls: True
+        redirects:
+          - src: /stats
+            target: https://ovirt.biterg.io/
 
