add privacy@ovirt.org alias to infra-private list
Needed for GDPR

Change-Id: I36dcd7b82f76cb92253f5cf889e083c99bd9ce39
Signed-off-by: Eyal Edri <eedri@redhat.com>

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -63,6 +63,7 @@
         events: community
         ovirt-copr: "{{ eedri_mail }}"
         infra-twitter: infra-private
+        privacy: infra-private
       use_simple_tls: True
       # social_auth is defined in host_vars
       # caught by underlying 'mailman3' role
