fix using non-qualified aliases to use the main domain (not the list one)
Change-Id: I0824ced163e7f6d3f7d615c7d2203c755ba024d1

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -73,6 +73,7 @@
         - gerrit.ovirt.org
         - redhat.com
       # caught by underlying 'postfix' role
+      myorigin: "{{ ovirt_domain }}"
       mynetworks:
         - 66.187.230.42
       local_accounts:
