add Doron to list admins
Change-Id: If6855f5c434fff268358948329c7fdec624f95f7

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -33,6 +33,7 @@
         - misc
         - eyal
         - ederevea
+        - doronf
       mail_aliases:
         # Person who should get root's mail
         root: "{{ ['root'] + ovirt_infra_emails }}"
