Discard very-likely SPAM
Change-Id: I3344e08cb7c2e27e162630bf46a36ffef9bd0c15

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -80,6 +80,13 @@
       local_accounts:
         - jira
         - jenkins
+  - name: Discard very-likely SPAM
+    blockinfile:
+      path: /etc/postfix/header_checks
+      block: |
+        /^X-Spam-Level: \*{8,}/ DISCARD
+      marker: "# {mark} ANSIBLE MANAGED BLOCK ML-SPAM"
+    notify: reload mail system
   - name: Install POP3 Server
     include_role:
       name: dovecot
