no forwarder anymore in PHX zone
Change-Id: I7ea0f0e2d2492bda213df2606882424c69b51e44

--- a/group_vars/phx_zone.yml
+++ b/group_vars/phx_zone.yml
@@ -1,3 +1,4 @@
 ---
 ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q monitoring.ovirt.org"'
-mail_forwarder: lists.phx.ovirt.org
+# none in this zone now
+#mail_forwarder: lists.phx.ovirt.org
