added new monitoring host
https://ovirt-jira.atlassian.net/browse/OVIRT-502

Change-Id: Iade48715c9ebc3eba8110d1232c97ca5b7d31084

--- a/hosts.yml
+++ b/hosts.yml
@@ -2,6 +2,9 @@
 all:
   hosts:
     mail.ovirt.org:
+    monitoring.ovirt.org:
+      # TODO: remove when DNS is switched
+      ansible_host: 8.43.85.199
     ovirt-web-builder.int.osci.io:
     www.phx.ovirt.org:
 
@@ -14,6 +17,7 @@ all:
     osci_zone:
       hosts:
         mail.ovirt.org:
+        monitoring.ovirt.org:
       children:
         osci_internal_zone:
           hosts:
