--- a/hosts.yml
+++ b/hosts.yml
@@ -6,18 +6,20 @@ all:
       # TODO: remove when DNS is switched
       ansible_host: 8.43.85.199
     ovirt-web-builder.int.osci.io:
-    www.phx.ovirt.org:
+    www.ovirt.org:
+      # TODO: remove when DNS is switched
+      ansible_host: 8.43.85.224
 
   children:
     phx_zone:
-     hosts:
-       www.phx.ovirt.org:
+     hosts: {}
 
     # zone managed by OSAS in the Community Cage project
     osci_zone:
       hosts:
         mail.ovirt.org:
         monitoring.ovirt.org:
+        www.ovirt.org:
       children:
         osci_internal_zone:
           hosts:
