--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -65,6 +65,8 @@
         ovirt-copr: "{{ eedri_mail }}"
         infra-twitter: infra-private
         privacy: infra-private
+        # default assignee in bugzilla, no reply expected
+        bugs: /dev/null
       use_simple_tls: True
       # social_auth is defined in host_vars
       # caught by underlying 'mailman3' role
