update OSCI zone info
Change-Id: I545490ae6decd61d6ce84373475ab3738a8bcd7d

--- a/hosts.yml
+++ b/hosts.yml
@@ -20,6 +20,8 @@ all:
         mail.ovirt.org:
         monitoring.ovirt.org:
         www.ovirt.org:
+      vars:
+        mail_forwarder: "{{ osci.mail_forwarder }}"
       children:
         osci_internal_zone:
           hosts:
