add JIRA web redirection
closes OVIRT-2476

Change-Id: Ife77f13eedfb7c0f3127dab68ee782ffc0753641

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -157,3 +157,18 @@
           - src: /stats
             target: https://ovirt.biterg.io/
 
+- hosts: www.ovirt.org
+  tasks:
+    - name: Create redirection for jira.ovirt.org
+      include_role:
+        name: httpd
+        tasks_from: vhost
+      vars:
+        website_domain: jira.ovirt.org
+        use_tls: True
+        use_letsencrypt: True
+        mail_domain: ovirt.org
+        force_tls: True
+        redirect: https://ovirt-jira.atlassian.net/
+  tags: jira
+
