add new httpd_wsgi role after the split from httpd role
Change-Id: I4721ccbb523a2071deb594ef0fcd9f87a7bca674

--- a/requirements.yml
+++ b/requirements.yml
@@ -41,3 +41,6 @@
   name: chrony
 - src: https://github.com/OSAS/ansible-role-swap_file
   name: swap_file
+- src: git+https://gitlab.com/osas/ansible-role-httpd_wsgi.git
+  name: httpd_wsgi
+
