Update open_basedir to fix pnp4nagios display
pnp4nagios RRDs are stored in /var/lib/pnp4nagios
which is not reachable by PHP with the current config.

Adding the directory to open_basedir to fix this

Change-Id: Ifb235185dd6e96bde73d091ff8a37fcccc89db93
Signed-off-by: Evgheni Dereveanchin <ederevea@redhat.com>

--- a/playbooks/monitoring.yml
+++ b/playbooks/monitoring.yml
@@ -32,4 +32,6 @@
           - /usr/share/nagios/html
           - /etc/nagios
           - /etc/pnp4nagios
+          - /var/lib/pnp4nagios
+          - /usr/bin/rrdtool
 
