add kubevirt-ci email alias
Adding an alias that we can use for a service account
linked to kubevirt-related stuff on GitHub.

Change-Id: Id044ded9759a67c997a60d16d6af00937df84748
Signed-off-by: Evgheni Dereveanchin <ederevea@redhat.com>

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -67,6 +67,7 @@
         ovirt-copr: "{{ eedri_mail }}"
         infra-twitter: infra-private
         privacy: infra-private
+        kubevirt-ci: infra-private
         # default assignee in bugzilla, no reply expected
         bugs: /dev/null
       use_simple_tls: True
